# ProjetInfoTd

./: .gitignore  build.sh  index.html
Archive-SiteWeb/: howtoplay.html  lore.html  team.html
Concepteur + Solveur/Concepteur Manuel/src/: fonctions.c
LateX/: rapport.tex
SiteWeb/: howtoplay.html  style.css  team.html
app/: grid_old.txt  package.json  server.js
app/website/: game.html  howtoplay.html  index.html  index.js  lore.html  style.css  team.html
app/website/Pictures/: projet_banner.xcf
app/website/data/: grid_overlap.txt  waves.txt
c/legacy_solver/: CMakeLists.txt
c/legacy_solver/src/: fonctions.h  stack.c
c/leveldesigner/: CMakeLists.txt  grid_old.txt
c/leveldesigner/src/: main.c  random.h
c/solver/: CMakeLists.txt
c/solver/src/: fonctions.c  fonctions.h  main.c  simulation.c  simulation.h  simulation_manager.c  simulation_manager.h  stack.h
concepteur_solveur/concepteur_aleatoire/: grid.txt  grid_old.txt
concepteur_solveur/concepteur_manuel/: grid.txt  grid_old.txt
concepteur_solveur/solveur/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  grid.txt  grid2.txt  grid_old.txt  grid_test.txt  solveur  solveur.cbp  start.sh  waves.txt
concepteur_solveur/solveur/src/: fonctions.c  fonctions.h  grid.txt  main  main.c  queue.c  queue.h  simulation.c  simulation.h  simulation_manager.c  test.c
website/: game.html  howtoplay.html  index.html  index.js  lore.html  style.css  team.html
website/data/: arena.txt  enemies.json  grid1.txt  grid6.txt  simple.txt  waves.json  waves.txt
website/data/grids/: grid1.txt  (+4 more)
(+11 files in other folders)
